apps/architecture-portal/versioned_docs/version-1.0.42.0/contracts/project.mdx
---
title: Project Contract
area: contracts
status: implemented
owners: [core, product]
contracts: [lmdj.project.v3, lmdj.project.v4]
source_paths: [contracts/project/lmdj.project.v1.schema.json, contracts/project/lmdj.project.v2.schema.json, contracts/project/lmdj.project.v3.schema.json, contracts/project/lmdj.project.v4.schema.json, packages/authoring-domain]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity kind="contracts" id="lmdj.project.v4" />

## 权威内容
`lmdj.project.v4 · 4.0.0` 是唯一当前写入真相：在素材引用、Pad Slot、完整 per-Pad playback、BPM、`quantize_enabled`、`swing_percent` 与 tick-native PPQ 960 Pattern events 之上，新增 `pattern_slots`、`performances` 两个顶层必填键与 Asset Lineage。`pattern_slots` 是长度恰好 16 的定长数组，每项要么是一个 Pattern UUID、要么是 `null`，构成唯一可 launch 的 Pattern 地址空间。Asset Lineage 记录 resample 派生的来源 Artifact、来源 Project revision、帧区间与来源 Performance；Project I/O 拒绝在早于 `lmdj.project.v4` 的 Project Truth 上写入 Lineage。
`performances` 是成员唯一的 Performance 数组。每个 Performance 必填 `performance_id`（uuid）、`name`（1..64 字符）、`created_bpm`（40..240）、`recording_revision`（>= 0）、`recording_artifact`（artifact 引用或 `null`）与 `events`。`performance_event` 是恰好七种 kind 的封闭并集：`pad_hit`（`slot` 0..63、`onset_tick`、`duration_tick` >= 1、`velocity` 1..127）、`pattern_launch`（`pattern_slot` 0..15、`effective_tick`）、`fx_engage` 与 `fx_move`（`fx` 0..7、`value` 0..1000、`tick`）、`fx_release`（`fx`、`tick`）、`hold_on` 与 `hold_off`（`tick`）。事件时间与 Pattern 一致，仍是 PPQ 960 tick-native。
Project I/O 可读取 v1/v2/v3，并在第一次成功 mutation 前完成确定性总迁移；writer 永远只发出 v4。v3→v4 迁移要求来源精确声明 v3、不得携带 v4 字段、Asset 必须是精确的旧形状；迁移把每个 Asset 的 `lineage` 置为 `null`、写入 16 个 `null` 的 `pattern_slots` 并给出空 `performances`。
## 明确排除
Runtime Snapshot、Provider 选择、Attempt failure、设备句柄和 Host 偏好不属于 Project Truth。录制过程、replay projection 与演奏期的 Performance 权威状态同样不是 Project Truth：Performance 只有在 save 成功提交后才成为 Project Truth，在此之前它是 journal 上的 draft。
## 引用不变量
Pattern event 引用 Pad Slot，Slot 再关联 Asset；事件不直接绑定 Asset。playback 属于 Slot，不属于不可变 Asset，同一 WAV 可被多个 Slot 以不同参数引用。Performance 事件遵循同一层间接：`pad_hit` 引用 Pad Slot 序号，`pattern_launch` 引用 `pattern_slots` 中的地址，都不直接绑定 Asset 或 Pattern 身份。
## 使用方与证据
Authoring Domain、Project I/O、Cooker 与 Facade 消费该 Contract，并由 schema、领域、v1/v2/v3→v4 migration、Cook、headless 与 packaged browser Proof 验证。录音过程本身是 journal overlay；只有 flush 的 commit receipt 对应 revision 发布后，Pattern events 才进入 Project Truth。Performance 录制沿用同一纪律：事件先进入 performance 类型的 journal 会话，save 提交后才写入 `performances`，其 `recording_artifact` 也在同一提交内绑定。
