apps/architecture-portal/versioned_docs/version-1.0.51.0/contracts/project.mdx
---
title: Project Contract
area: contracts
status: implemented
owners: [core, product]
contracts: [lmdj.project.v3, lmdj.project.v4, lmdj.project.v5]
source_paths: [contracts/project/lmdj.project.v1.schema.json, contracts/project/lmdj.project.v2.schema.json, contracts/project/lmdj.project.v3.schema.json, contracts/project/lmdj.project.v4.schema.json, contracts/project/lmdj.project.v5.schema.json, packages/authoring-domain]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity kind="contracts" id="lmdj.project.v5" />

## 权威内容
当前 Project Contract 是唯一写入真相：在素材引用、Pad Slot、完整 per-Pad playback、BPM、`quantize_enabled`、`swing_percent` 与 tick-native PPQ 960 Pattern events 之上，新增 `pattern_slots`、`performances` 两个顶层必填键与 Asset Lineage。`pattern_slots` 是长度恰好 16 的定长数组，每项要么是一个 Pattern UUID、要么是 `null`，构成唯一可 launch 的 Pattern 地址空间。Asset Lineage 是同一个载体上的两组封闭并集，`source` 与 `derivation` 各自由常量 `kind` 判别且都拒绝多余键：`source.kind` 为 `asset_artifact` 时记录来源 Artifact 摘要与来源 Project revision，为 `soundset` 时记录 `set_id`、`set_version`、`manifest_sha256`、`slot_index`（0..15）与 `artifact_sha256`；`derivation.kind` 为 `resample` 时记录帧区间与来源 Performance，为 `soundset_install` 时不带任何负载。`4.1.0` 是向后兼容的追加：`4.0.0` reader 按设计拒绝 `soundset` Lineage。Project I/O 拒绝在早于 `lmdj.project.v4` 的 Project Truth 上写入 Lineage。
`performances` 是成员唯一的 Performance 数组。每个 Performance 必填 `performance_id`（uuid）、`name`（1..64 字符）、`created_bpm`（40..240）、`recording_revision`（>= 0）、`recording_artifact`（artifact 引用或 `null`）与 `events`。`performance_event` 是恰好七种 kind 的封闭并集：`pad_hit`（`slot` 0..63、`onset_tick`、`duration_tick` >= 1、`velocity` 1..127）、`pattern_launch`（`pattern_slot` 0..15、`effective_tick`）、`fx_engage` 与 `fx_move`（`fx` 0..7、`value` 0..1000、`tick`）、`fx_release`（`fx`、`tick`）、`hold_on` 与 `hold_off`（`tick`）。事件时间与 Pattern 一致，仍是 PPQ 960 tick-native。
Project I/O 可读取 v1/v2/v3/v4，并在第一次成功 mutation 持久化时完成确定性迁移；writer 永远只发出 v5。v4→v5 保留全部旧字段与 lineage，只改变 Contract 身份；单纯打开不回写旧文件。v3→v4 迁移要求来源精确声明 v3、不得携带 v4 字段、Asset 必须是精确的旧形状；迁移把每个 Asset 的 `lineage` 置为 `null`、写入 16 个 `null` 的 `pattern_slots` 并给出空 `performances`。

## Slice 采纳 Lineage

新增的 `derivation.kind: capability_adoption` 只支持 Slice，必须搭配现有
`source.kind: asset_artifact`，source 保留分析时的 Artifact 摘要与 Project
revision。派生字段全部必填且每层拒绝额外键：`capability {id, contract,
version}`、`provider {id, version, artifact_sha256}`、`model_identity`（同样的
implementation identity 或显式 `null`）、`parameters_sha256`、`attempt_id`、
`source_asset_id`、`output_artifact {sha256, media_type, byte_length}` 与
`recipe {kind: slice_interval_v1, start_frame, end_frame, frame_rate}`。
参数摘要来自原始 terminal request；Provider 摘要标识注册的 source package，
不宣称 binary digest。model version 保留 terminal 原始字符串。

Recipe 是非空半开帧区间，帧率来自已验证的源 PCM16 WAV；整数和字节上限沿用
已批准 Slice Contract。Schema 验证封闭形状，Domain 额外验证 start < end。
源 revision 是分析 revision，不随采纳时的无关编辑变动。派生 Asset 的
`artifact` 是独立物化 WAV 身份；Job/Set/recipe ID 只属于 Workspace，
不另增真相字段。旧 resample 和 soundset_install 字段完整保留，旧 v4 reader
拒绝 capability_adoption；v4 声明下伪装的新 Lineage 也拒绝。

Project I/O round-trip 与内部 import receipt 比较完整证据，冲突 payload 不得
复用 receipt。这不改变 AdoptCandidates 的约定：旧 revision 重试拒绝，
当前 revision 上的新确认是新的采纳，首版不承诺采纳命令幂等重放。
Preview 不持久化 lineage；候选不可用或原始字节丢失不允许重写已有 lineage。

## 明确排除
Runtime Snapshot、Provider 选择、Attempt failure、设备句柄和 Host 偏好不属于 Project Truth。录制过程、replay projection 与演奏期的 Performance 权威状态同样不是 Project Truth：Performance 只有在 save 成功提交后才成为 Project Truth，在此之前它是 journal 上的 draft。
## 引用不变量
Pattern event 引用 Pad Slot，Slot 再关联 Asset；事件不直接绑定 Asset。playback 属于 Slot，不属于不可变 Asset，同一 WAV 可被多个 Slot 以不同参数引用。Performance 事件遵循同一层间接：`pad_hit` 引用 Pad Slot 序号，`pattern_launch` 引用 `pattern_slots` 中的地址，都不直接绑定 Asset 或 Pattern 身份。
## 使用方与证据
Authoring Domain、Project I/O、Cooker 与 Facade 消费该 Contract，并由 schema、领域、v1/v2/v3→v4 migration、Cook、headless 与 packaged browser Proof 验证。录音过程本身是 journal overlay；只有 flush 的 commit receipt 对应 revision 发布后，Pattern events 才进入 Project Truth。Performance 录制沿用同一纪律：事件先进入 performance 类型的 journal 会话，save 提交后才写入 `performances`，其 `recording_artifact` 也在同一提交内绑定。
